--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					  <h2>About Me</h2>
 					</div>
 					<div class="col-lg-3 col-md-4 col-sm-5 col-xs-12 text-center">
-						<img class="about-pic" src="img/mypic.gif" class="img-responsive img-fluid">
+						<img class="about-pic img-responsive img-circle" src="img/profilepic.png">
 					</div>
 					<div class="about-text col-lg-9 col-md-8 col-sm-7 col-xs-12 text-center">
 						<p><strong>Hi, I'm Tenzin</strong>, a Frontend web developer based in <strong>NYC</strong>. I enjoy everything from building websites from scratch to deployment, and I love building beautiful and responsive websites. I graduated from NYC College of Technology with Bachelor in Computer Science and during my semester, I took Web Development course and since then, I fell in love with it... </p> 
@@ -74,7 +74,7 @@
 			</div>
 			
 		</div>
-
+		<div class="padding-top-bottom"></div>
 		<div class="t-border"></div>
 
 <!------- Projects ------->
@@ -100,7 +100,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="padding-top-bottom">
+		<div class="padding-top-bottom"></div>
 			<div class="container">
 				<div class="row">
 					<div class="proj-imgs col-lg-6 col-lg-push-6 col-md-4 col-sm-12 col-xs-12">
@@ -118,7 +118,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="padding-top-bottom">
+		<div class="padding-top-bottom"></div>
 			<div class="container">
 				<div class="row">
 					<div class="proj-imgs col-lg-6 col-md-4 col-sm-12 col-xs-12">
@@ -136,7 +136,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="padding-proj1"></div>
+		<div class="padding-top-bottom"></div>
 		<div class=" t-border"> </div>
 
 <!------- Skills------->
