--- a/index.html
+++ b/index.html
@@ -183,14 +183,14 @@
 						</div>
 						<div class="col-sm-4 col-xs-6 footer-logo">
 							<img class="footer-logo" src="img/logo/logosq.png">
-							<h4>Tenzin Thayai &copy; 2018</h4>
+							<h4>Tenzin Thayai &copy; 2022</h4>
 						</div>
 						<div class="col-sm-4 col-xs-6">
 							<h3>Let's Connect!</h3>
 							<a href="https://www.facebook.com/thayai" target="_blank" class="fa fa-facebook"></a>
 							<a href="https://www.linkedin.com/in/tenzin-thayai/" target="_blank" class="fa fa-linkedin-square"></a>
 							<a href="https://github.com/tenzinthayai" target="_blank" class="fa fa-github"></a>
-							<a href="mailto:tenzinthayai@gmail.com" class="fa fa-envelope-o"></a>
+							<a href="mailto:tenzinthayai1@gmail.com" class="fa fa-envelope-o"></a>
 						</div>
 					</div>
 
