Updated contact info, project links.

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 						<h4>Techs:</h4>
 						<p>HTML 5, CSS 3, JavaScript, Flexbox, DOM, Responsive Design</p>
 						<a href="https://github.com/tenzinthayai/Random-Quote-Generator" target="_blank" class="fa fa-github" style="color:black;padding-left: 0;"></a>
-						<a href="https://random-quote-gen.netlify.com/" target="_blank" class="fa fa-link" style="color:#1773cf;"></a>
+						<a href="https://random-quote-gen2.netlify.app/" target="_blank" class="fa fa-link" style="color:#1773cf;"></a>
 					</div>
 				</div>
 			</div>
@@ -113,7 +113,7 @@
 						<h4>Techs:</h4>
 						<p>HTML 5, CSS 3, JavaScript, Responsive Design</p>
 						<a href="https://github.com/tenzinthayai/Laketahoe-site" target="_blank" class="fa fa-github" style="color:black;padding-left: 0;"></a>
-						<a href="https://visit-laketahoe.netlify.com/" target="_blank" class="fa fa-link" style="color:#1773cf;"></a>
+						<a href="https://visit-laketahoe.netlify.app/" target="_blank" class="fa fa-link" style="color:#1773cf;"></a>
 					</div>
 				</div>
 			</div>
@@ -131,7 +131,7 @@
 						<h4>Techs:</h4>
 						<p>HTML 5, CSS 3, Responsive Design</p>
 						<a href="https://github.com/tenzinthayai/tenzinVR.github.io" target="_blank" class="fa fa-github" style="color:black;padding-left: 0;"></a>
-						<a href="https://vr-experience.netlify.com/" target="_blank" class="fa fa-link" style="color:#1773cf;"></a>
+						<a href="https://vr-experience.netlify.app/" target="_blank" class="fa fa-link" style="color:#1773cf;"></a>
 					</div>
 				</div>
 			</div>
@@ -183,7 +183,7 @@
 						</div>
 						<div class="col-sm-4 col-xs-6 footer-logo">
 							<img class="footer-logo" src="img/logo/logosq.png">
-							<h4>Tenzin Thayai &copy; 2022</h4>
+							<h4>Tenzin Thayai &copy; 2018</h4>
 						</div>
 						<div class="col-sm-4 col-xs-6">
 							<h3>Let's Connect!</h3>
