Updated resume links

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						<li><a href="#projects">Projects</a></li>
 						<li><a href="#skills">Skills</a></li>
 						<li><a href="#contact">Contact</a></li>
-						<a href="https://drive.google.com/open?id=1uFIqg-0_s_cw14MV4602ac-7Yv3wg8Wd" target="_blank"><button type="button" class="resume">Resume</button></a>
+						<a href="https://drive.google.com/file/d/129Q0lEzISSUoXxu9RL3MCNvy5AC-g_-r/view?usp=sharing" target="_blank"><button type="button" class="resume">Resume</button></a>
 
 					</ul>
 				</div>
@@ -187,7 +187,7 @@
 						</div>
 						<div class="col-sm-4 col-xs-6">
 							<h3>Let's Connect!</h3>
-							<a href="https://www.facebook.com/thayai" target="_blank" class="fa fa-facebook"></a>
+							<a href="https://drive.google.com/file/d/129Q0lEzISSUoXxu9RL3MCNvy5AC-g_-r/view?usp=sharing" target="_blank" class="fa fa-address-card-o" aria-hidden="true"></a>
 							<a href="https://www.linkedin.com/in/tenzin-thayai/" target="_blank" class="fa fa-linkedin-square"></a>
 							<a href="https://github.com/tenzinthayai" target="_blank" class="fa fa-github"></a>
 							<a href="mailto:tenzinthayai1@gmail.com" class="fa fa-envelope-o"></a>
